[gd_scene load_steps=17 format=3 uid="uid://cshp88csqtplv"]

[ext_resource type="PackedScene" uid="uid://clf104ugdt8k2" path="res://scenes/player/player.tscn" id="1_2c4kc"]
[ext_resource type="Script" path="res://scenes/main/main.gd" id="1_bdjtt"]
[ext_resource type="PackedScene" uid="uid://cl0r4j1d3e3qe" path="res://scenes/mob/mob.tscn" id="2_r24qb"]
[ext_resource type="FontFile" uid="uid://bj5ccxxg7dut5" path="res://fonts/Montserrat-Medium.ttf" id="4_xxs5k"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="5_wfkf8"]

[sub_resource type="BoxShape3D" id="BoxShape3D_snqup"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxMesh" id="BoxMesh_s2tor"]
size = Vector3(60, 2, 60)

[sub_resource type="BoxShape3D" id="BoxShape3D_lro6b"]
size = Vector3(1, 10, 25.5)

[sub_resource type="BoxMesh" id="BoxMesh_thbmh"]
size = Vector3(1, 10, 25.5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aq3r8"]
albedo_color = Color(1, 0, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_n61ki"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_4maxt"]
albedo_color = Color(0.220257, 0.867499, 0.695841, 1)

[sub_resource type="Curve3D" id="Curve3D_8yoim"]
_data = {
"points": PackedVector3Array(0, 0, 0, 0, 0, 0, -13.5, 0, -12.5, 0, 0, 0, 0, 0, 0, 13.5, 0, -12.5, 0, 0, 0, 0, 0, 0, 13.5, 0, 12.5, 0, 0, 0, 0, 0, 0, -13.5, 0, 12.5, 0, 0, 0, 0, 0, 0, -13.5, 0, -12.5),
"tilts": PackedFloat32Array(0, 0, 0, 0, 0)
}
point_count = 5

[sub_resource type="BoxShape3D" id="BoxShape3D_0oo0b"]
size = Vector3(10, 2, 10)

[sub_resource type="BoxShape3D" id="BoxShape3D_nelwy"]
size = Vector3(1, 7, 10)

[sub_resource type="Theme" id="Theme_lpo2j"]
default_font = ExtResource("4_xxs5k")
default_font_size = 22

[node name="Main" type="Node"]
script = ExtResource("1_bdjtt")
mob_scene = ExtResource("2_r24qb")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 25, 0)
shadow_enabled = true

[node name="Player" parent="." instance=ExtResource("1_2c4kc")]

[node name="Arena" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
collision_layer = 4
collision_mask = 0
metadata/_edit_group_ = true

[node name="Floor" type="CollisionShape3D" parent="Arena"]
shape = SubResource("BoxShape3D_snqup")

[node name="FloorMesh" type="MeshInstance3D" parent="Arena/Floor"]
mesh = SubResource("BoxMesh_s2tor")
skeleton = NodePath("../..")

[node name="Walls" type="StaticBody3D" parent="Arena"]
visible = false
collision_layer = 4
collision_mask = 0

[node name="North" type="CollisionShape3D" parent="Arena/Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 6, -11.2)
shape = SubResource("BoxShape3D_lro6b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Arena/Walls/North"]
mesh = SubResource("BoxMesh_thbmh")
surface_material_override/0 = SubResource("StandardMaterial3D_aq3r8")

[node name="East" type="CollisionShape3D" parent="Arena/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.2, 6, 0)
shape = SubResource("BoxShape3D_lro6b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Arena/Walls/East"]
mesh = SubResource("BoxMesh_thbmh")
surface_material_override/0 = SubResource("StandardMaterial3D_aq3r8")

[node name="South" type="CollisionShape3D" parent="Arena/Walls"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 6, 12.1)
shape = SubResource("BoxShape3D_lro6b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Arena/Walls/South"]
mesh = SubResource("BoxMesh_thbmh")
surface_material_override/0 = SubResource("StandardMaterial3D_aq3r8")

[node name="West" type="CollisionShape3D" parent="Arena/Walls"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.2, 6, 0)
shape = SubResource("BoxShape3D_lro6b")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Arena/Walls/West"]
mesh = SubResource("BoxMesh_thbmh")
surface_material_override/0 = SubResource("StandardMaterial3D_aq3r8")

[node name="Cylinders" type="Node3D" parent="Arena"]
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="Arena/Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.5, 2, -12.5)
mesh = SubResource("CylinderMesh_n61ki")
surface_material_override/0 = SubResource("StandardMaterial3D_4maxt")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Arena/Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.5, 2, -12.5)
mesh = SubResource("CylinderMesh_n61ki")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_4maxt")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Arena/Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 13.5, 2, 12.5)
mesh = SubResource("CylinderMesh_n61ki")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_4maxt")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Arena/Cylinders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.5, 2, 12.5)
mesh = SubResource("CylinderMesh_n61ki")
skeleton = NodePath("")
surface_material_override/0 = SubResource("StandardMaterial3D_4maxt")

[node name="SpawnPath" type="Path3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.3, 0)
visible = false
curve = SubResource("Curve3D_8yoim")

[node name="SpawnLocation" type="PathFollow3D" parent="Arena/SpawnPath"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -13.5, 0, -12.5)

[node name="PlayerSpawnMarker" type="Marker3D" parent="Arena"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.83488, 0)

[node name="Jail" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -7, 0)
collision_layer = 4
collision_mask = 0
metadata/_edit_group_ = true

[node name="JailFloorCollider" type="CollisionShape3D" parent="Jail"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
shape = SubResource("BoxShape3D_0oo0b")

[node name="JailWallNorthCollider" type="CollisionShape3D" parent="Jail"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.5, -5.5)
shape = SubResource("BoxShape3D_nelwy")

[node name="JailWallEastCollider" type="CollisionShape3D" parent="Jail"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.5, 1.5, 0)
shape = SubResource("BoxShape3D_nelwy")

[node name="JailWallSouthCollider" type="CollisionShape3D" parent="Jail"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 1.5, 5.5)
shape = SubResource("BoxShape3D_nelwy")

[node name="JailWallWestCollider" type="CollisionShape3D" parent="Jail"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5.5, 1.47646, 0)
shape = SubResource("BoxShape3D_nelwy")

[node name="PlayerJailMarker" type="Marker3D" parent="Jail"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)

[node name="CameraPivot" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.559193, 0.829038, 0, -0.829038, 0.559193, 0, 0, 0)
visible = false
metadata/_edit_group_ = true

[node name="Camera3D" type="Camera3D" parent="CameraPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 30)
projection = 1
size = 19.0
far = 400.0

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_lpo2j")
script = ExtResource("5_wfkf8")

[node name="DebugLabel" type="Label" parent="UI"]
z_index = 1
layout_mode = 1
offset_right = 262.0
offset_bottom = 193.0
text = "Mobs: n/a"

[node name="ScoreLabel" type="Label" parent="UI"]
z_index = 1
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -44.0
offset_right = 44.0
offset_bottom = 28.0
grow_horizontal = 2
text = "Score: 0"

[node name="Message" type="Label" parent="UI"]
z_index = 1
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -134.0
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 64
text = "Message Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="UI/Message"]
one_shot = true

[node name="Retry" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.52549)

[node name="RetryLabel" type="Label" parent="UI/Retry"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = -14.0
offset_right = 114.5
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="ScoreTimer" type="Timer" parent="."]

[connection signal="hit" from="Player" to="." method="_on_player_hit"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
